# bitcoin_vault_manager

./: .gitignore  README.md
.claude/: settings.local.json
design/: 00_PROJECT_OVERVIEW.md  01_RUST_CORE_SPEC.md  02_FLUTTER_APP_SPEC.md  03_DATA_MODELS.md  04_FFI_INTERFACE.md  05_WATCHER_SERVICE.md  06_USER_FLOWS.md  08_SECURITY_MODEL.md  09_TESTING_STRATEGY.md  10_DEVELOPMENT_ROADMAP.md
freedom-wallet-app/: README.md  pubspec.yaml
freedom-wallet-app/android/app/: build.gradle.kts
freedom-wallet-app/ios/Runner/: Info.plist
freedom-wallet-app/ios/Runner.xcodeproj/: project.pbxproj
freedom-wallet-app/lib/: main.dart
freedom-wallet-app/lib/app/: app.dart  router.dart  theme.dart
freedom-wallet-app/linux/: CMakeLists.txt
freedom-wallet-app/linux/runner/: my_application.cc
freedom-wallet-app/macos/Runner.xcodeproj/: project.pbxproj
freedom-wallet-app/test/: widget_test.dart
freedom-wallet-app/test/screens/: alerts_screen_test.dart  backup_center_test.dart  dashboard_screen_test.dart  settings_screen_test.dart  template_screen_test.dart  welcome_screen_test.dart
freedom-wallet-app/web/: index.html  manifest.json
freedom-wallet-app/windows/: CMakeLists.txt
freedom-wallet-app/windows/runner/: Runner.rc  main.cpp
vault-core/: Cargo.toml
vault-core/src/: error.rs  lib.rs
vault-core/src/ffi/: mod.rs
vault-core/src/keys/: mod.rs
vault-core/src/taproot/: mod.rs
vault-core/src/transaction/: mod.rs
vault-core/src/vault/: mod.rs
vault-core/tests/: find_xpub.rs
vault-watcher/: .gitignore  main.py  pyproject.toml
(+66 files in other folders)
