[package]
name = "vault-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Bitcoin Core (using latest stable versions)
bdk = { version = "0.30", features = ["keys-bip39"] }
bitcoin = "0.30"
miniscript = { version = "10.0", features = ["serde"] }
secp256k1 = { version = "0.27", features = ["global-context"] }

# Key Management
bip39 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI
libc = "0.2"

# Error Handling
thiserror = "1.0"

# Encoding
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
